@@ -174,7 +174,6 @@
  o Whether to unregister and how to unregister?
    ssl_var_unregister();
    ssl_ext_unregister();
- o We certainly need CRYPTO_set_locking_callback() now also under Unix!
  o Do we need SSL_set_read_ahead()?
  o Enable use of MM, SHMCB and SHMHT.
  o Enable SSL extensions (ssl_engine_ext.c)
